--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "devDependencies": {
     "@types/node": "20.3.1",
+    "eslint": "9.9.0",
+    "eslint-config-next": "14.2.5",
     "typescript": "5.1.3"
   }
 }
